Made all the columns responsive but fix overlap

--- a/style.css
+++ b/style.css
@@ -139,3 +139,17 @@ a {
     place-content: center;
   }
 }
+
+@media only screen and (max-width: 1110px) {
+  .container-two {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 778px) {
+  .container-two {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
